# DBGC

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  bin2h.cmake  errata.md  gb2header.cmake
hw/: .gitignore  RP2040.kicad_sch  USB.kicad_sch  bom.csv  fp-lib-table  gb_pico_cart.kicad_pcb  gb_rp2040_cart.kicad_pcb  gb_rp2040_cart.kicad_pro  gb_rp2040_cart.kicad_sch  peripherals.kicad_sch  pos.csv  power.kicad_sch  sym-lib-table
hw/footprints/Gekkio_Connector_PCBEdge.pretty/: GameBoy_Cartridge_1x32_P1.50mm_Edge.kicad_mod  GameBoy_Cartridge_1x32_P1.50mm_Full.kicad_mod
hw/footprints/Project_Specific.pretty/: 23LC1024-IP.kicad_mod  4-SMT-Horizontal.kicad_mod  BatteryHolder_Seiko_MS621FE.kicad_mod  BatteryHolder_Seiko_MS920SE.kicad_mod  CLXC8T245QRHLRQ1.kicad_mod  DFN-10-2.5x2.7mm-P0.8.kicad_mod  DFN0606-3.kicad_mod  GCT_USB4105-GF-A.kicad_mod  K2-1114SA-A4SW-06.kicad_mod  MY-2032-11.kicad_mod  Push_Button-Horizontal-TC-1109DE-C-J.kicad_mod  SOIC-10_RV-3129-C3.kicad_mod  TS-1037-A10B3-D2.kicad_mod  TestPoint_Pad_D0.5mm.kicad_mod  WLCSP-4-0.64x0.64mm_P0.35mm.kicad_mod
hw/footprints/RP_RP2040.pretty/: RP2040-QFN-56.kicad_mod
hw/libraries/: Gekkio_Connector_Specialized.kicad_sym  Gekkio_Logic_LevelTranslator.kicad_sym  Project_specific.kicad_sym  RP_RP2040.kicad_sym  SamacSys_Parts.dcm  SamacSys_Parts.kicad_sym  SamacSys_Parts.lib  USB4105-GF-A.kicad_sym  USB4105-GF-A.lib
hw/models/: CLXC8T245QRHLRQ1.stp  NEW_PCB_2021-09-30.pcbdoc  OBJ_NEW_PCB.mtl
sw/basic_impl/: CMakeLists.txt
sw/basic_impl/inc/: cart.h  gb_manager.gb.h  generic.h  libbet.gb.h
sw/basic_impl/inc/board/: deltabeard_dbgc.h
sw/basic_impl/src/: comms.pio  impl.c  verify.c
sw/basic_impl/src/boot_stage2/: boot2_W25Q128JV_dual.S  boot2_w25q080_dual.S
sw/boot_stage2_test/: CMakeLists.txt
sw/boot_stage2_test/inc/board/: boot2_w25q128jv.S  deltabeard_dbgc.h
sw/boot_stage2_test/src/: test.c
sw/dmg/: .gitignore  Makefile  constants.inc  gen_charmap.c  hardware.inc  hello-world.asm  menu_data.asm  text_macros.inc
sw/emu/: CMakeLists.txt  README.md
sw/emu/src/: peanut_gb.h
sw/gb/: .gitignore  CMakeLists.txt  Makefile  gb_manager.c
sw/gb/emu/: CMakeLists.txt  README.md
sw/gb/emu/src/: peanut_sdl.c
sw/gb/src/: gb_manager.c
sw/gb_manager/inc/: 2048.gb.h  cart.h  generic.h  memmap_copy_to_ram.ld  pico-sdk-ram.h  rom_512kb.gb.h
sw/gb_manager/inc/board/: deltabeard_dbgc.h
sw/gb_manager/src/: comms.pio  comms_basic.pio  ds1302.pio  gb.c  pico-sdk-ram.c  rp2040.c  rp2040_old.c  verify.c
sw/rp2040/: CMakeLists.txt
sw/rp2040/inc/: main.h  tusb_config.h  usb.h
sw/rp2040/inc/peripherals/: io_expander.h
sw/rp2040/src/: comms.pio  main.c  rtc.c  usb.c  usb_descriptors.c
sw/rp2040_old/inc/: usb.h
sw/rp2040_old/inc/peripherals/: rtc.h
sw/rp2040_old/src/: comms.pio  io_expander.c  rtc.c  usb.c  usb_descriptors.c
sw/verify/: CMakeLists.txt
sw/verify/inc/: gb240p.gb.h  gb_manager.gb.h  libbet.gb.h  verify.h
sw/verify/inc/board/: boot2_W25Q128JV_dual.S  deltabeard_dbgc.h
sw/verify/src/: comms.pio  core2.c  verify.c
